
0.9.5 Oct 01, 2003
 * fixed pkg name so that slack-desc shows up... wasn't following
   new package naming convention.  Thanks Luke Yelavich <luke@audioslack.com>

0.9.4 Sep 29, 2003
 * downloads CHECKSUMS.md5 from mirror
 * md5 sum's each package after downloading (from CHECKSUMS.md5 data)
   utilizing openssl/evp.h
 * pre-download check... won't download twice if md5sum is good
 * error checking updates
 * more verbose messages during operation
 * fixed chdir/mkdir bug in working_dir
 * unlink faulty d/l files/pkgs (failed to d/l or checksum is bad)
 * fixed bug with ftp transfers... connections left open
   some ftp servers complain and deny access after so many connections
 * doc updates
 * install make target now creates /var/slapt-get

0.9.3 Sep 24, 2003
 * default make target doesn't build slack pkg
 * --dist-upgrade becomes target instead of option
 * merged dist-upgrade into --upgrade, --install also
   checks if available pkg is newer than installed
   dist-upgrade removed.
 * Added a FAQ to documentation
 * added error notification when commands fail

0.9.2 Sep 22, 2003
 * renamed to slapt-get
 * documentation updates

0.9 Sep 17, 2003
 * --re-install is now --reinstall
 * code updates

0.8 Sep 07, 2003
 * --remove target now accepts multiple arguments
  ( --remove pkg1 pkg2 pkg3 pkg4 )
 * --upgrade speed improvement (optimizations)
 * --dist-upgrade works for --upgrade
 * -ansi compatible now as well as -pedantic
 * introduced struct pkg_list, updated funcs returning pkg_list **
 * --upgrade now prompts before upgrading the package
 * --no-prompt option for overriding --upgrade prompt
 * --re-install option to install even if already installed
 * added EXCLUDE option in slapt-getrc (to exclude pkgs)
 * --ignore-excludes for --upgrade
 * is_excluded() returns false if EXCLUDE= not defined
 * added slackpkg make target

0.7: Aug 28, 2003 
 * now creates directories within WORKINGDIR for each packages location